--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/ReadFiles2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.apache-commons-lang.jar=C:\\Users\\yoyo\\Desktop\\apache-commons-lang.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.apache-commons-lang.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
